# mongo-c-driver

./: CMakeLists.txt
src/libmongoc/: CMakeLists.txt
src/libmongoc/src/mongoc/: mongoc-cluster-sasl.c  mongoc-config.h.in  mongoc-rand-rust.c  mongoc-stream-tls.c
src/libmongoc/tests/: test-libmongoc-main.c  test-mongoc-rust.c
src/rust/: .gitignore  CMakeLists.txt  Cargo.toml  cbindgen.toml
src/rust/src/: bson.rs  client.rs  collection.rs  database.rs  future.rs  lib.rs  log.rs  mongoc.rs
